--- a/Statify/appsettings.json
+++ b/Statify/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Statify-221A1EBB-EA25-478C-B016-F65D31A95FA8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
