Chnaged to azure server in appsettings

--- a/Statify/appsettings.json
+++ b/Statify/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
+    "DefaultConnection": "Server=statify.database.windows.net;Database=Statify;User Id=samuelthaiyil;Password=Statify123;"
   },
   "Logging": {
     "LogLevel": {
