--- a/Statify/appsettings.json
+++ b/Statify/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=statify.database.windows.net;Database=Statify;User Id=samuelthaiyil;Password=Statify123;"
+    "DefaultConnection": "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +11,7 @@
   },
   "AllowedHosts": "*"
 }
+
+// "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
+
+// "Server=statify.database.windows.net;Database=Statify;User Id=samuelthaiyil;Password=Statify123;"
