Updated appsettings.json with google creds

--- a/Statify/appsettings.json
+++ b/Statify/appsettings.json
@@ -9,7 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "327823571488-cp6vub5khs3epqe7668u72pmf54d92p8.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
 
 // "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
