Switched back to azure test

--- a/Statify/appsettings.json
+++ b/Statify/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql5097.site4now.net;Database=db_a7c79e_statifydb;User Id=db_a7c79e_statifydb_admin;Password=Statify123;"
+    "DefaultConnection": "Server=statify.database.windows.net;Database=Statify;User Id=samuelthaiyil;Password=Statify123;"
   },
   "Logging": {
     "LogLevel": {
@@ -17,7 +17,11 @@
     }
   }
 }
+//SmarterAsp
+// "Server=sql5097.site4now.net;Database=db_a7c79e_statifydb;User Id=db_a7c79e_statifydb_admin;Password=Statify123;"
 
+//local
 // "Server=DESKTOP-IJOH59O;Database=Statify;Integrated Security=true;"
 
+  //azure
 // "Server=statify.database.windows.net;Database=Statify;User Id=samuelthaiyil;Password=Statify123;"
